chore(opvc-kit): cleanup artifacts/configs; keep example configs; doc+ignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ __pycache__/
 
 # local/debug artifacts
 artifacts/
+
+# ===== opvc local/runtime artifacts =====
+artifacts/
+outputs/
+runs/
+*.pt
+*.pth
+*.ckpt
+*.log
+*.log.json
+*.summary.json
+__pycache__/
+*.pyc
+*.pyo
+configs/_trash/
